--- a/docker/ansible/templates/compose-modules/dawarich.yml
+++ b/docker/ansible/templates/compose-modules/dawarich.yml
@@ -164,6 +164,10 @@ services:
       - "traefik.http.routers.dawarich-noauth-rtr.rule=Host(`dawarich-noauth.$DOMAINNAME`)"
       - "traefik.http.routers.dawarich-noauth-rtr.service=dawarich"
       - "traefik.http.routers.dawarich-noauth-rtr.entrypoints=https-public"
+      ## Router for Gatus — bypass auth if secret header is present
+      - "traefik.http.routers.dawarich-monitor-rtr.rule=Host(`dawarich.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
+      - "traefik.http.routers.dawarich-monitor-rtr.service=dawarich-svc"
+      - "traefik.http.routers.dawarich-monitor-rtr.priority=100"  # Higher priority so it matches first
     logging:
       driver: "json-file"
       options:
