--- a/docker/ansible/templates/compose-modules/excalidraw.yml
+++ b/docker/ansible/templates/compose-modules/excalidraw.yml
@@ -27,11 +27,11 @@ services:
       ## Middlewares
       - "traefik.http.routers.excalidraw-rtr.middlewares=chain-auth@file"
       ## HTTP Services
-      - "traefik.http.routers.excalidraw-rtr.service=excalidraw-svc"
-      - "traefik.http.services.excalidraw-svc.loadbalancer.server.port=80"
+      - "traefik.http.routers.excalidraw-rtr.service=excalidraw"
+      - "traefik.http.services.excalidraw.loadbalancer.server.port=80"
       ## Router for Gatus — bypass auth if secret header is present
       - "traefik.http.routers.excalidraw-monitor-rtr.rule=Host(`excalidraw.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
-      - "traefik.http.routers.excalidraw-monitor-rtr.service=excalidraw-svc"
+      - "traefik.http.routers.excalidraw-monitor-rtr.service=excalidraw"
       - "traefik.http.routers.excalidraw-monitor-rtr.priority=100"  # Higher priority so it matches first
 
 networks:
