--- a/docker/ansible/templates/compose-modules/immich.yml
+++ b/docker/ansible/templates/compose-modules/immich.yml
@@ -44,15 +44,15 @@ services:
       - "traefik.http.routers.immich-rtr.middlewares=chain-auth@file"
       - "traefik.http.routers.immich-rtr.rule=Host(`photos.$DOMAINNAME`)"
       ## HTTP Services
-      - "traefik.http.routers.immich-rtr.service=immich-svc"
-      - "traefik.http.services.immich-svc.loadbalancer.server.port=2283"
+      - "traefik.http.routers.immich-rtr.service=immich"
+      - "traefik.http.services.immich.loadbalancer.server.port=2283"
       ## Extra no-auth endpoint. No need to create a new service
       - "traefik.http.routers.immich-noauth-rtr.rule=Host(`photos-noauth.$DOMAINNAME`)"
       - "traefik.http.routers.immich-noauth-rtr.middlewares=chain-no-auth-immich-server@file"
-      - "traefik.http.routers.immich-noauth-rtr.service=immich-svc"
+      - "traefik.http.routers.immich-noauth-rtr.service=immich"
       ## Router for Gatus — bypass auth if secret header is present
       - "traefik.http.routers.immich-monitor-rtr.rule=Host(`photos.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
-      - "traefik.http.routers.immich-monitor-rtr.service=immich-svc"
+      - "traefik.http.routers.immich-monitor-rtr.service=immich"
       - "traefik.http.routers.immich-monitor-rtr.priority=100"  # Higher priority so it matches first
     networks:
       - immich-frontend
