--- a/docker/ansible/templates/compose-modules/it-tools.yml
+++ b/docker/ansible/templates/compose-modules/it-tools.yml
@@ -26,11 +26,11 @@ services:
       - "traefik.http.routers.it-tools-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.it-tools-rtr.rule=Host(`tools.$DOMAINNAME`)"
-      - "traefik.http.routers.it-tools-rtr.service=it-tools-svc"
-      - "traefik.http.services.it-tools-svc.loadbalancer.server.port=80"
+      - "traefik.http.routers.it-tools-rtr.service=it-tools"
+      - "traefik.http.services.it-tools.loadbalancer.server.port=80"
       ## Router for Gatus — bypass auth if secret header is present
       - "traefik.http.routers.it-tools-monitor-rtr.rule=Host(`tools.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
-      - "traefik.http.routers.it-tools-monitor-rtr.service=it-tools-svc"
+      - "traefik.http.routers.it-tools-monitor-rtr.service=it-tools"
       - "traefik.http.routers.it-tools-monitor-rtr.priority=100"  # Higher priority so it matches first
 
 networks:
