--- a/docker/ansible/templates/compose-modules/openspeedtest.yml
+++ b/docker/ansible/templates/compose-modules/openspeedtest.yml
@@ -26,11 +26,11 @@ services:
       - "traefik.http.routers.openspeedtest-rtr.middlewares=chain-auth@file"
       ## HTTP Services
       - "traefik.http.routers.openspeedtest-rtr.rule=Host(`speedtest.$DOMAINNAME`)"
-      - "traefik.http.routers.openspeedtest-rtr.service=openspeedtest-svc"
-      - "traefik.http.services.openspeedtest-svc.loadbalancer.server.port=3000"
+      - "traefik.http.routers.openspeedtest-rtr.service=openspeedtest"
+      - "traefik.http.services.openspeedtest.loadbalancer.server.port=3000"
       ## Router for Gatus — bypass auth if secret header is present
       - "traefik.http.routers.openspeedtest-monitor-rtr.rule=Host(`speedtest.$DOMAINNAME`) && Header(`X-Monitor-Key`, `$GENERIC_MONITORING_HEADER_SECRET`)"
-      - "traefik.http.routers.openspeedtest-monitor-rtr.service=openspeedtest-svc"
+      - "traefik.http.routers.openspeedtest-monitor-rtr.service=openspeedtest"
       - "traefik.http.routers.openspeedtest-monitor-rtr.priority=100"  # Higher priority so it matches first
 
 networks:
