Add arr stack + introduce homepage widgets

--- a/docker/ansible/inventory/group_vars/media/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/media/secrets.sops.yml
@@ -4,6 +4,9 @@ generic__svlnas_smb_user: ENC[AES256_GCM,data:DEjYJWqG77ixbIgB,iv:ZZ84KQC+3Fwmk4
 generic__svlnas_smb_password: ENC[AES256_GCM,data:FeAi9kh+ycd89Nlhp1k7pkl39QBb+MXfcrTYzzWFeHV9Srz3hZqiSC5bLnLDzGIJEnIkPhEDZ+70Er6F63M5Kw==,iv:inI1/lYjXnImZEPFE61aRvzX2otvb6i0IC90AbmdrkM=,tag:qgKbqJ9pF70YLQi/xBkPlg==,type:str]
 generic__svlnas_smb_shares:
     - ENC[AES256_GCM,data:m2wa5KDBmtcRJdD+mvVyKzg=,iv:oRq9BmXl9KC3kjwq3OoI+qLj6qacGkR2USR+R8YjF6A=,tag:lJ0JoBeDxHF0poQM1/HySw==,type:str]
+    - ENC[AES256_GCM,data:ibp+3oDF,iv:kCnbGNH0Or30gPW4acl2yBeMQRa9vUchNmYM85H4v0A=,tag:+Hjljd6VDRADvkxU0Qpebw==,type:str]
+    - ENC[AES256_GCM,data:eSJZXo8=,iv:mku/ELrC5IFDSa2wg7iuDU8tBlMVAmQBvCrnjJYryJA=,tag:8UZnaNDbS0BftLaBYh5pRQ==,type:str]
+    - ENC[AES256_GCM,data:5io=,iv:qZCdofp43KHUBHakLQovVBbBTkf79ORPz67yhJ2rwTI=,tag:VB2LHy57yPodHFfntBghZA==,type:str]
 #ENC[AES256_GCM,data:xH1mZmGOtekL0pddt4k=,iv:OkxMaN8fg18FcJ5x4yslfVwfkmE37G8xKf19I6NJdoc=,tag:4/GqGSybsUE1xViIi+gOdA==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:NlJNVAzpAo56IUYFX7jM7RGh5G5S65TL1yzbx69Onn1FNPIWIL/0qZpy6TNjFt3um795PlevyzyUhBGxVlvZwg==,iv:fgVTVxB6xfUiDEy1B03YHtZwEvlgHSAEGRtGeoZcyXY=,tag:TTJaB3f9DuYYYu5rX1fWPg==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
@@ -12,6 +15,16 @@ apps__traefik_forward_auth_secret: ENC[AES256_GCM,data:6BUZOTzkUlwrheIjySxn638wk
 #ENC[AES256_GCM,data:6SYMncMo1qoM0Q==,iv:duT8JV4AlE05wAzb4Kp28A7m1NrhliQixf9Y6BpcbKI=,tag:/Z3N+lhpeo1zaBYHqt8mtA==,type:comment]
 apps__influxdb_password: ENC[AES256_GCM,data:GmR9yqgdhZGrE6e+bWo7leMGbOLtjg2jL8saQm+PpXo=,iv:zGSdQ79yIHI0OD739VjIvprINVR8YTYXweUJCo/ULrM=,tag:Y67siWdC6X5rPtGI49TuNA==,type:str]
 apps__influxdb_admin_token: ENC[AES256_GCM,data:19L0gKL1FRj8AOE7daTMg3eXpk+bCo33FDmGhWkXQznDWYQ5m/1YsqDbkL98IKfQZ5XWVssP1xtY27kqa0CiOg==,iv:R/bq6TdUvYmIjxPgW29lQo4xvWMQhgeKrrxom0aNQRc=,tag:xVcXvvxDw0UwUHra8IlEGw==,type:str]
+#ENC[AES256_GCM,data:l8gUydkFaHK7zg==,iv:X1VQpdEDfjql1DstxzlBI7GCM3eNDHRyP0/yWtRllsI=,tag:E4d7LEy09lTr331oEJBKGw==,type:comment]
+apps__spottarr_usenet_hostname: ENC[AES256_GCM,data:mATDDzjzKdwrWiZ8Jg==,iv:bv/5zFBfBG2xxgRYPZ/G/YsNs/Si/damYAN9t63+Hhk=,tag:T7A028SqHkUOTBKuw9M4OQ==,type:str]
+apps__spottarr_usenet_username: ENC[AES256_GCM,data:P59qqXoR4Qy4s6UdO77LRQ==,iv:3SdEXz/IQzXT86TpG21qBzxmZgXVqHkDjITsGH/t1oE=,tag:JOiWAmU1B42wuFd1y/K8XA==,type:str]
+apps__spottarr_usenet_password: ENC[AES256_GCM,data:SS0ckr/8mUm3yID9S5tByAuHbKx9b4YvQkVdVNIIO/o=,iv:f1MNgic57uRrr2CnOOnISdM3PELxjIG5JLZVaVKP1ZU=,tag:kI3uUpjAfATjJeTen/CIfA==,type:str]
+apps__spottarr_usenet_port: ENC[AES256_GCM,data:XbpL,iv:Kanp9lQBcAmENcMMVM61vY2X3IWT3hnxvtOOu5fYtg4=,tag:Xz/7OgMjoPumeMl4w8ZWbg==,type:int]
+apps__spottarr_usenet_usetls: ENC[AES256_GCM,data:r5Pn8Q==,iv:uMRk2cVTsG0feKdV/58d8JutNVYbB4KxgzfGg0nNE6o=,tag:OSH/T3CSnyP6IjyO4IkkZA==,type:bool]
+apps__spottarr_usenet_maxconnections: ENC[AES256_GCM,data:Sxg=,iv:9p9ZawmgVq2NfRyohIAOH8pmyctMvW0SBGmBtOFPP5U=,tag:d1Duv9Tf2T11nxsfyX73rg==,type:int]
+apps__spottarr_spotnet_retrieveafter: ENC[AES256_GCM,data:xntOcc7KNfUNCM7+L1iZl//OiiY=,iv:lxDXdOBcwOJL64NdkW4/ehXbC/IxPQOgm060aL2lHmE=,tag:1PQAx7Hva0jShh1FbOqqbQ==,type:str]
+apps__spottarr_spotnet_importbatchsize: ENC[AES256_GCM,data:9DuSmgY=,iv:Y80UDzskQHXQiLfOP6seCEwqO6DNzZraq7siI6CW3II=,tag:YnuwQSOMcyksh/y34hoVtA==,type:int]
+apps__spottarr_spotnet_retentiondays: ENC[AES256_GCM,data:UJff,iv:7ypFdoZ4bwhzs8Yz4ngkXPzXBp2dgDAqp9wqLVvW0r4=,tag:IWVqRNa0RHV89+hAUlU0ig==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -27,8 +40,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-05T15:45:39Z"
-    mac: ENC[AES256_GCM,data:h5bSyldpkVieap3AsC6R1e/6PuxJSXCs7QpswJgxPm65UDnK2pVuMUNp8P+iZ8kBn9EBmoeeaRfoaxLN05mZlJ9+yZ7TflOIafOhjafeRMdwo1NrLrqNXyF4k9hON+BMpzVeyfeoCPw3VPHq/HNtE/rRU0/HfaKrmbZqi9ldtBQ=,iv:WA+P0RPRf6U+0QuiWZg/sQJL5m6xZNBGHI9TVbp7sDc=,tag:nrmf+iZMZCBe2vJssytzMg==,type:str]
+    lastmodified: "2025-12-24T12:11:42Z"
+    mac: ENC[AES256_GCM,data:bNYAlbKZGHs5e9RALsxcNe/KTL96e18ZYaWePuhkkWDHMTu85vlRN9v6k+nbSYU6vTo5UFsTRa/8VGFAabFHHsWiTh5HQT9U+c+2qlASt9WJ15qYobQCIaaLmUwhWlJuHEgbSfeveFh6lDVThm8ZHUN8xM+yLl/4hYZrYJlPbP4=,iv:Xm1hw/TBa86JRhX6YBIh9TDgWkl5E0UDf9fLFWTOdYI=,tag:XZzX++VXcZDMToKmk8Fnzw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
