Add DMZ web server

--- a/docker/ansible/inventory/group_vars/all/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/all/secrets.sops.yml
@@ -14,6 +14,7 @@ generic__hostnames_desktop: ENC[AES256_GCM,data:ArBBm1Yx7Yv5wVEULQ==,iv:gT32ebod
 generic__svlnas_smb_server: ENC[AES256_GCM,data:xnPCGSTaKRrywIcE,iv:UBTkwES+DiFBccO41b9zInZEcnovqqehONX4trjwBIk=,tag:QjNzhYwuIoKprTRzkTxSvA==,type:str]
 #ENC[AES256_GCM,data:YG9EYvk=,iv:ohKGrqHgUEt6J+ZAoyU4SCcFufLBpXDMR879XuIW+/Y=,tag:MTsrOlfHI3eN1CDpeaS9CQ==,type:comment]
 generic__ips_svlext: ENC[AES256_GCM,data:skLtCu4jEeajbsmKQA==,iv:sEt7nbRvR4lBDzk4pjLFIkh6OI/GBK8TyKv05amN8k0=,tag:mav7JOP10xWc/AMIlbraQw==,type:str]
+generic__ips_svldmz: ENC[AES256_GCM,data:yVBmFcCkjpQ3Xc69,iv:VGAm5/KpIG6Xo8amiBrA8LBwdyd+oDJ6tBWrQ2i3C84=,tag:i9BCNCgyOflVl7rrS3x56Q==,type:str]
 #ENC[AES256_GCM,data:BbnLB6mq7g==,iv:7TMfJfjqYxgy1q+eE3csJQ6tOra1zzzLdODSX56yhMo=,tag:T0MLRp7YThTz5KVNEVsQBQ==,type:comment]
 generic__public_https_port: ENC[AES256_GCM,data:/Jvnq3M=,iv:B50VhmjHP1/MVWKOUy3RVShMjy4GAB2hL9Y+QmRNTJA=,tag:Pc8Z15B8ISmW+2C+Z7JduA==,type:int]
 #ENC[AES256_GCM,data:rNMVlLOS7A==,iv:oaQzgp9JXKULW7T6d+VJYfQS6+kweWwEkxRbPA6ExLE=,tag:BYCxExn+ElvS+EggLjETwA==,type:comment]
@@ -57,8 +58,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-15T21:18:56Z"
-    mac: ENC[AES256_GCM,data:wkKod90KLv9xkBb3KSBRdy7alkAp9V9MH3TSgOIFWbD0S1QVuy8Qe92EoZqfYljhFHEyDUpdgBT/aVer+fL3/QBb5Y/IMPJ2Xnnh0wj7jK+dSCVmrqcUPk4W/uQe2RPbltsONWQ0nb5CVEU8MrRfd2IMhi16dQ60gYiFXvF7PN0=,iv:vVdbu9jn6jrIfjyYiL0U/FtiLaxFn8YO6W8GOMa9avY=,tag:6wFkVM6wCtIwbQY2WU4iMw==,type:str]
+    lastmodified: "2025-12-30T12:18:16Z"
+    mac: ENC[AES256_GCM,data:eKNXZD7BNJhn/axJzqohtcaa0DaB8kxpxh2XI/FS/uRhsNgmzbsL945GSENG2NneMr3fju4qD4aYDpnN2HVd+Na0f3QBBT89H3eMwUfRw5pDL0BwCtg5avzDZzJFq59cR5HP0s6bdPHdxi6VKe0zz2WV4bGTMsc9dfXqdD/Hv3c=,iv:3PQG6h/f9/nxUfiQ8s45iMBAF84Z1TiKCoJWt8KCvls=,tag:KyBriy5NRRPSyci4fUoJ+w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
