Integrate concept of untrusted VMs

--- a/docker/ansible/inventory/hosts.yaml
+++ b/docker/ansible/inventory/hosts.yaml
@@ -47,7 +47,7 @@ compute:
                           ansible_user: "jean-paul"
                 untrusted:
                   children:
-                    external:
+                    dmz:
                       hosts:
                         svldmz.ravensberg.org:
                           ansible_user: "jean-paul"
