Include token for hadiscover

--- a/docker/ansible/inventory/group_vars/dmz/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/dmz/secrets.sops.yml
@@ -5,6 +5,7 @@ generic__database_backup_storage_account_key: ENC[AES256_GCM,data:HdGjxDyJpEdZfo
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
 #ENC[AES256_GCM,data:tM3tWIQ0IuvCGItPjHPUuaz1sBwPJg==,iv:NEDG/rNiJCr9d1Rpxl72wszExb8fXfA1/HEbnjBDprM=,tag:x3TBxhEWVYHgDNIx7s/abA==,type:comment]
 apps__traefik_forward_auth_secret: ENC[AES256_GCM,data:4b8Kp0BN81P9ZRavFau4GnA4kHCIwGVrj4fqpA0h3567lI/VUdFsjjer5fCvZPT3HtN7FRNxyI5b9n7AbljKLQ==,iv:oKyaO4JOoA/hTROcG2wp3JMRHUs9QVRzm6KGBZp0U6E=,tag:hx22pBmNJPC4L0NkQGTkiA==,type:str]
+apps__hadiscover_github_token: ENC[AES256_GCM,data:iY9Xwv0AD0b3cifLujpbI/fTpmvTOq83zoaxsN/nI0EF3y/cR6y9PxNNSVkkHgmAkLnH/7hEp9KeGFuwwctm2y3NzAqNbxRbx1QjN5+JuOEH7v9cd5Nx8XmizaeZ,iv:/rqkyphmVIXwKSMv/gGpSjCcD11iWY+aa+4FKmLGzfE=,tag:WvWNBS9QmQcyu3qxtliilQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +21,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-12-30T14:17:42Z"
-    mac: ENC[AES256_GCM,data:NVurGp2LhVio/GiZsC4JpqCBqIVYyAdpcNT6a2JFEEqiIS4cptI00kXqgvuyYFd9NWPxdQZyN7xqrkjblSuWJQcYgUCsabtHfofcjnH238Awqo3Q7j1Kr3JQOeR/tMDnoYO8MMDX2mP4qLylmvzUi3+8Kx7yVosTQ0EwoGeCooI=,iv:I1fhgqD31EXufsieZs7NzuNwCjMjrMc7QOjzJKtLpZE=,tag:LDPueuAr/X6sKjdQMV89gQ==,type:str]
+    lastmodified: "2025-12-31T08:52:09Z"
+    mac: ENC[AES256_GCM,data:ovfDckxQH3ucv5d7gZFC82kDz0MpPGFZ4PvdgVPGrYsht6AKnimAY4dR0p5OafudfJIWimKZDa2AiVtDx4jU/ST9wFMzXW1i1gjfNAPPgjjibaI33lSR4iNNb+TXoXEVjGp9Zog6piisBcGmO3nnSiJNxZO19QWFdGWiN6aeFmY=,iv:1+XvcU073gEif8VkR3ztZUlg+wC3OprWnwLn3qWEeow=,tag:C1Dx5MIft3vl8F9UBhLQQA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
