--- a/docker/ansible/templates/compose-modules/hadiscover.yml
+++ b/docker/ansible/templates/compose-modules/hadiscover.yml
@@ -13,6 +13,7 @@ services:
     mem_limit: 1024m
     environment:
       - TZ=${TZ}
+      - GITHUB_TOKEN=${HADISCOVER_GITHUB_TOKEN}
     volumes:
       # Persist database across container restarts
       - hadiscover-api-data:/app/data
