--- a/mise.toml
+++ b/mise.toml
@@ -10,6 +10,16 @@ TASK_X_MAP_VARIABLES = 0
 description = "Install all Python dependencies"
 run = "python -m pip install -r requirements.txt"
 
+[tasks."install:ansible"]
+description = "Install Ansible collections and roles"
+run = "ansible-galaxy install -r docker/ansible/requirements.yml"
+depends = ["install"]
+
+[tasks."install:all"]
+description = "Install all dependencies (Python + Ansible)"
+run = "echo 'All dependencies installed successfully!'"
+depends = ["install", "install:ansible"]
+
 [tools]
 python = "3.14.2"
 "aqua:astral-sh/uv" = "latest"
