--- a/docker/ansible/inventory/group_vars/media/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/media/secrets.sops.yml
@@ -12,6 +12,7 @@ notifications__mailrise_smtp_password: ENC[AES256_GCM,data:NlJNVAzpAo56IUYFX7jM7
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
 #ENC[AES256_GCM,data:E36VcHT1DRf3boifOeYmBaMx1pDtSg==,iv:y5j+81z6V075CSJgcfxu7IVhHLRkmzFJ21U9/uoNxoA=,tag:0KjKKifNFuVGQp/QMTYW4A==,type:comment]
 apps__traefik_forward_auth_secret: ENC[AES256_GCM,data:6BUZOTzkUlwrheIjySxn638wkF/8o6nxZOZpkwLWpqXuAS4J0FRNJQ7SM0+ePjvQ5hNsFykGYTEeMrVrK1zDhw==,iv:imh1YoLgjQDSgYr+MoVM+uizCoxWkQwwVxt0b21zeRw=,tag:za9HjDgd77qdU+QfDMGUpA==,type:str]
+apps__traefik_use_local_certs: ENC[AES256_GCM,data:lskZ1g==,iv:vWUpwJ2RT2JCKk6B1RwNL7xhH0ZRIR0BopHuF3+hEeI=,tag:LxLgY1eVahvPOx0clgvh+A==,type:bool]
 #ENC[AES256_GCM,data:6SYMncMo1qoM0Q==,iv:duT8JV4AlE05wAzb4Kp28A7m1NrhliQixf9Y6BpcbKI=,tag:/Z3N+lhpeo1zaBYHqt8mtA==,type:comment]
 apps__influxdb_password: ENC[AES256_GCM,data:GmR9yqgdhZGrE6e+bWo7leMGbOLtjg2jL8saQm+PpXo=,iv:zGSdQ79yIHI0OD739VjIvprINVR8YTYXweUJCo/ULrM=,tag:Y67siWdC6X5rPtGI49TuNA==,type:str]
 apps__influxdb_admin_token: ENC[AES256_GCM,data:19L0gKL1FRj8AOE7daTMg3eXpk+bCo33FDmGhWkXQznDWYQ5m/1YsqDbkL98IKfQZ5XWVssP1xtY27kqa0CiOg==,iv:R/bq6TdUvYmIjxPgW29lQo4xvWMQhgeKrrxom0aNQRc=,tag:xVcXvvxDw0UwUHra8IlEGw==,type:str]
@@ -40,8 +41,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-12-24T12:11:42Z"
-    mac: ENC[AES256_GCM,data:bNYAlbKZGHs5e9RALsxcNe/KTL96e18ZYaWePuhkkWDHMTu85vlRN9v6k+nbSYU6vTo5UFsTRa/8VGFAabFHHsWiTh5HQT9U+c+2qlASt9WJ15qYobQCIaaLmUwhWlJuHEgbSfeveFh6lDVThm8ZHUN8xM+yLl/4hYZrYJlPbP4=,iv:Xm1hw/TBa86JRhX6YBIh9TDgWkl5E0UDf9fLFWTOdYI=,tag:XZzX++VXcZDMToKmk8Fnzw==,type:str]
+    lastmodified: "2026-02-03T10:23:48Z"
+    mac: ENC[AES256_GCM,data:adeT7LaHpNE9kssSh7doe+Pzg+Zzc57GRDG+JrKjI3qvG7ddK2uWvWtPEK5LXxZ15snra6bZJb2UI2kzSF0gh/TksjbVc5rxtvN76TilfgnYIjKq8i22XvwevKT7CWdvbSQ5TFsc+AIM6MwRILbaeWWwxHcdDuq5MGjnjhvLDOk=,iv:4WJznC4vge1idMsYDELzJ7xdsqSaH7zMV7agtvi6DIo=,tag:l8otsE+CbCdSbdFN2NbiRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
